removing negative margin to fix layout issue

--- a/assets/_styles/core/buttons.scss
+++ b/assets/_styles/core/buttons.scss
@@ -220,7 +220,7 @@ button {
     &.list {
       @extend %paragraph;
       display: block;
-      margin: 30px 0 -20px;
+      margin-top: 30px;
       padding: 0;
     }
   }
